--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "test-app": "jest",
+    "test": "jest",
     "start": "ts-node src/index.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'"
   },
@@ -21,9 +20,6 @@
     "url": "https://github.com/DmytroZHD/automotive/issues"
   },
   "homepage": "https://github.com/DmytroZHD/automotive#readme",
-  "dependencies": {
-    "express": "^4.21.1"
-  },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
@@ -31,12 +27,13 @@
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
+    "express": "^4.21.2",
     "globals": "^15.12.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
+    "typescript": "^5.7.3",
     "typescript-eslint": "^8.15.0"
   }
 }
